# shaula-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install.cmd  install.ps1  install.sh  release.py
shaula/: __init__.py  __main__.py  cli.py  gate.py  honesty.py  providers.py  settings.py  setup_wizard.py
shaula/engine/: __init__.py  banned.py  build_practice.py  citations.py  generate.py  pipeline.py
shaula/workflows/: CAPABILITY_MANIFEST.json  README.md  __init__.py  author.py  builder.py  local_executor.py
tests/: conftest.py  test_cli.py  test_gate.py  test_honesty.py  test_providers.py  test_settings.py  test_standalone.py
web/: index.html
